trying to fix the image not showing up issue 22

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 /* Hero BG */
 header {
-  background-image: url(\Assets\Hero-bg.png);
+  background-image: url(./Assets/Hero-bg.png);
   height: 652px;
 }
 
@@ -187,6 +187,7 @@ nav {
   font-size: 16px;
   display: flex;
   justify-content: space-between;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 /* get in touch section */
